[package]
name = "Rust"
version = "0.1.0"
#authors = ["aswarth123 <c.v.aswarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foo = { version = "1.0", optional = true }
bar = { version = "1.0", optional = true }
